限制资源分配指定 JVM 的参数、使用Java 安全管理器限制用户对文件、内存、CPU、网络等资源的操作和访问、使用HuTool 工具库的字典树工具类：WordTree限制代码 - 黑白名单、写一个操作docker的demo